--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -1021,7 +1021,7 @@
             </p>
             <br>
             <br>
-            <button onclick="location.href='Requestquote.html'">REQUEST QUOTE</button>
+            <button onclick="location.href='RequestQuote.html'">REQUEST QUOTE</button>
           </section>
           <p></p>
         </div>
@@ -1059,7 +1059,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1080" data-image-height="1350">
+                  <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="1080" data-image-height="1350">
                     <img src="images/DORADACLEANERS2.png" class="u-logo-image u-logo-image-1">
                   </a>
                   <p class="u-text u-text-default u-text-grey-30 u-text-3">
