--- a/public/Gallery.html
+++ b/public/Gallery.html
@@ -278,7 +278,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               </div>
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1080" data-image-height="1350">
+                  <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="1080" data-image-height="1350">
                     <img src="images/DORADACLEANERS2.png" class="u-logo-image u-logo-image-1">
                   </a>
                   <p class="u-text u-text-default u-text-grey-30 u-text-3">
