--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -138,6 +138,7 @@
        }
        .icon-cart{
            position: relative;
+           margin-right: 5%;
        }
        .icon-cart span{
            position: absolute;
@@ -678,7 +679,7 @@
          
 <div class="containerone">
   <header>
-      <div class="title">Apartment Cleaning List</div>
+      <div class="title">Apartment Cleaning </div>
       <div class="icon-cart">
           <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1"/>
@@ -693,7 +694,7 @@
 
 <div class="containerone">
   <header>
-      <div class="title">House Cleaning List</div>
+      <div class="title">House Cleaning </div>
   </header>
   <div class="listOfficeProduct">
       <!-- Office cleaning products will be added here dynamically -->
@@ -701,7 +702,7 @@
 </div>
 <div class="containerone">
   <header>
-      <div class="title">Dry Cleaning List</div>
+      <div class="title">Dry Cleaning </div>
   </header>
   <div class="listDryCleaning">
       <!-- Dry cleaning products will be added here dynamically -->
@@ -711,7 +712,7 @@
 <!-- Extras Section -->
 <div class="containerone">
   <header>
-      <div class="title">Extras List</div>
+      <div class="title">Extras </div>
   </header>
   <div class="listExtras">
       <!-- Extra products will be added here dynamically -->
