--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -1025,7 +1025,7 @@
             </p>
             <br>
             <br>
-            <button onclick="location.href='RequestQuote.html'">REQUEST QUOTE</button>
+            <button onclick="location.href='requestQuote.html'">REQUEST QUOTE</button>
           </section>
           <p></p>
         </div>
