--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -920,7 +920,7 @@
       },
       cartItems
   };
-  axios.post('http://localhost:8000/api/orders', orderDetails)
+  axios.post('https://www.dinastiadorada.com.pl/api/orders', orderDetails)
       .then(response => {
           console.log('Order submitted successfully');
           closeCheckoutModal();
