--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -920,7 +920,7 @@
       },
       cartItems
   };
-  axios.post('https://www.dinastiadorada.com.pl/api/orders', orderDetails)
+  axios.post('https://cleaners-104cddb3f5ef.herokuapp.com/api/orders', orderDetails)
       .then(response => {
           console.log('Order submitted successfully');
           closeCheckoutModal();
