--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -684,7 +684,7 @@
 <!-- Modal Structure -->
 <div id="orderSuccessModal" class="modal" style="display:none; position: fixed; z-index: 100; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.4);">
     <div class="modal-content" style="background-color: #fefefe; margin: 15% auto; padding: 20px; border: 1px solid #888; width: 80%; max-width: 450px;">
-      <span class="close" style="color: #aaa; float: right; font-size: 28px; font-weight: bold;">&times;</span>
+      <span class="close" id="close" style="color: #aaa; float: right; font-size: 28px; font-weight: bold;">&times;</span>
       <p>Your order has been submitted successfully!</p>
     </div>
   </div>
@@ -955,6 +955,13 @@ window.onclick = function(event) {
     document.getElementById('orderSuccessModal').style.display = 'none';
   }
 }
+
+// Listener for close icon
+document.getElementById('close').addEventListener('click', function() {
+  document.getElementById('orderSuccessModal').style.display = "none";
+});
+
+
 
   document.getElementById('checkoutForm').addEventListener('submit', function(event) {
       event.preventDefault();
