--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -1002,7 +1002,7 @@ document.getElementById('close').addEventListener('click', function() {
             <h2>HOW TO GET IN TOUCH WITH US?</h2>
             <br>
             <br>
-            <p>Schedule a service with Dorada Cleaning by dialing <strong>+48 729 296 383</strong>. We are eager to offer you comprehensive details about our services. Feel free to capitalize on our competitive rates! Serving all major London areas, no task is beyond our capacity, regardless of its size. We look forward to making your space a happier and cleaner environment!
+            <p>Schedule a service with Dorada Cleaning by dialing <strong>+48 729 296 383</strong>. We are eager to offer you comprehensive details about our services. Feel free to capitalize on our competitive rates! Serving all cities, no task is beyond our capacity, regardless of its size. We look forward to making your space a happier and cleaner environment!
             </p>
             <br>
             <br>
