--- a/public/Gallery.html
+++ b/public/Gallery.html
@@ -169,17 +169,17 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-align-center u-text u-text-custom-color-2 u-text-default u-text-1">Our Work </h2>
         <div class="u-expanded-width u-gallery u-layout-horizontal u-lightbox u-no-transition u-show-text-on-hover u-width-fixed u-gallery-1">
-          <div class="u-gallery-inner"><div class="u-effect-fade u-gallery-item u-gallery-item-1"><div class="u-back-slide"><img class="u-back-image u-back-image-1" src="images/90fc53c9.svg">
+          <div class="u-gallery-inner"><div class="u-effect-fade u-gallery-item u-gallery-item-1"><div class="u-back-slide"><img class="u-back-image u-back-image-1" src="images/gallery4.JPG">
 </div><div class="u-over-slide u-shading u-over-slide-1"></div>
-</div><div class="u-effect-fade u-gallery-item u-gallery-item-2"><div class="u-back-slide"><img class="u-back-image u-back-image-2" src="images/90fc53c9.svg">
+</div><div class="u-effect-fade u-gallery-item u-gallery-item-2"><div class="u-back-slide"><img class="u-back-image u-back-image-2" src="images/gallery1.JPG">
 </div><div class="u-over-slide u-shading u-over-slide-2"></div>
-</div><div class="u-effect-fade u-gallery-item u-gallery-item-3"><div class="u-back-slide"><img class="u-back-image u-back-image-3" src="images/90fc53c9.svg">
+</div><div class="u-effect-fade u-gallery-item u-gallery-item-3"><div class="u-back-slide"><img class="u-back-image u-back-image-3" src="images/gallery2.JPG">
 </div><div class="u-over-slide u-shading u-over-slide-3"></div>
-</div><div class="u-effect-fade u-gallery-item u-gallery-item-4"><div class="u-back-slide"><img class="u-back-image u-back-image-4" src="images/90fc53c9.svg">
+</div><div class="u-effect-fade u-gallery-item u-gallery-item-4"><div class="u-back-slide"><img class="u-back-image u-back-image-4" src="images/gallery4.JPG">
 </div><div class="u-over-slide u-shading u-over-slide-4"></div>
-</div><div class="u-effect-fade u-gallery-item u-gallery-item-5"><div class="u-back-slide"><img class="u-back-image u-back-image-5" src="images/90fc53c9.svg">
+</div><div class="u-effect-fade u-gallery-item u-gallery-item-5"><div class="u-back-slide"><img class="u-back-image u-back-image-5" src="images/gallery5.JPG">
 </div><div class="u-over-slide u-shading u-over-slide-5"></div>
-</div><div class="u-effect-fade u-gallery-item u-gallery-item-6"><div class="u-back-slide"><img class="u-back-image u-back-image-6" src="images/90fc53c9.svg">
+</div><div class="u-effect-fade u-gallery-item u-gallery-item-6"><div class="u-back-slide"><img class="u-back-image u-back-image-6" src="images/gallery 6.jpg">
 </div><div class="u-over-slide u-shading u-over-slide-6"></div>
 </div></div>
           <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-1" href="#" role="button">
@@ -215,37 +215,37 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/90fc53c9.svg">
+                <img class="u-back-image u-expanded" src="images/gallery1.JPG">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1"></div>
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/90fc53c9.svg">
+                <img class="u-back-image u-expanded" src="images/gallery5.JPG">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2"></div>
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/90fc53c9.svg">
+                <img class="u-back-image u-expanded" src="images/gallery2.JPG">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3"></div>
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/90fc53c9.svg">
+                <img class="u-back-image u-expanded" src="images/gallery3.JPG">
               </div>
               <div class="u-over-slide u-shading u-over-slide-4"></div>
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/90fc53c9.svg">
+                <img class="u-back-image u-expanded" src="images/gallery4.JPG">
               </div>
               <div class="u-over-slide u-shading u-over-slide-5"></div>
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/90fc53c9.svg">
+                <img class="u-back-image u-expanded" src="images/gallery 6.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-6"></div>
             </div>
