--- a/public/Contact.html
+++ b/public/Contact.html
@@ -32,8 +32,8 @@
         <nav class="u-align-right u-hidden-lg u-hidden-sm u-hidden-xl u-hidden-xxl u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-              <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-698a"></use></svg>
-              <svg class="u-svg-content" version="1.1" id="svg-698a" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+              <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="#svg-698a"></use></svg>
+              <svg class="u-svg-content" version="1.1" id="svg-698a" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="https://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
