--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -944,7 +944,7 @@
   };
 
   // axios.post('https://cleaners-104cddb3f5ef.herokuapp.com/api/orders', orderDetails)
-  axios.post('https://dorada-cleaners.vercel.app/api/orders', orderDetails)
+  axios.post('https://www.dinastiadorada.com.pl/api/orders', orderDetails)
       .then(response => {
           console.log('Order submitted successfully');
           // Show modal on success
