--- a/public/requestQuote.html
+++ b/public/requestQuote.html
@@ -344,7 +344,7 @@ const requestQuote = {
 };
 
 
-axios.post('https://cleaners-104cddb3f5ef.herokuapp.com/submit', requestQuote)
+axios.post('https://www.dinastiadorada.com.pl/submit', requestQuote)
     .then(response => {
         // Show modal on success
         document.getElementById('orderSuccessModal').style.display = 'block';
