--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -65,7 +65,7 @@
 }
 .call-to-action button {
    font-size: 13px; /* adjust this value to your preferred size */
-   background-color: #574822;
+   background-color: red;
    color: white;
 }
 .containerone{
