totalSection media queries changed

--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -700,7 +700,8 @@ margin-left: 10%;
     .totalSection {
       flex-direction: column; /* Stack items vertically on small screens */
       text-align: center;
-      width: 100%;
+      margin-left: -15%;
+      width: 130%;
     }
 
     .totalSection div {
