--- a/public/T&Cs.html
+++ b/public/T&Cs.html
@@ -214,7 +214,7 @@
               <li><strong>Name:</strong> Dinastia Dorada Spółka z ograniczoną odpowiedzialnością</li>
               <li><strong>Address:</strong> Zlota 75A/7, 00-819 Warszawa</li>
               <li><strong>Registration Details:</strong> CEIDG KRS number: 0001080235, NIP: 5273092305, REGON: 527421647</li>
-              <li><strong>Contact Email:</strong> <a href="mailto:doradacleaners@gmail.com">doradacleaners@gmail.com</a></li>
+              <li><strong>Contact Email:</strong> <a href="mailto:info@dinastiadorada.com.pl">info@dinastiadorada.com.pl</a></li>
           </ul>
   
           <h2>Purpose of Data Processing</h2>
@@ -251,7 +251,7 @@
           <p>For any inquiries or to exercise your data protection rights, please contact us at:</p>
           <ul>
               <li><strong>Address:</strong> Warszawa, Zlota 75A/7, 00-819 Warszawa</li>
-              <li><strong>Email:</strong> <a href="mailto:doradacleaners@gmail.com">doradacleaners@gmail.com</a></li>
+              <li><strong>Email:</strong> <a href="mailto:info@dinastiadorada.com.pl">info@dinastiadorada.com.pl</a></li>
           </ul>
       </div>
       </div>
