--- a/public/requestQuote.html
+++ b/public/requestQuote.html
@@ -318,8 +318,8 @@ height: auto;
             <br>
             <textarea id="info" name="info"></textarea>
             <br>
-            <input type="checkbox" id="disclaimer" name="disclaimer" required="">
-            <label for="disclaimer">I agree to the <a href="T&Cs.html" target="_blank">terms and conditions</a>.</label>
+            
+            <input type="checkbox" id="disclaimer" name="disclaimer" required=""><label for="disclaimer">I agree to the <a href="T&Cs.html" target="_blank">terms and conditions</a>.</label>
 
             <br>
             <input type="submit" value="Submit">
