--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -702,6 +702,8 @@ margin-left: 10%;
       text-align: center;
       margin-left: -15%;
       width: 130%;
+      position: -webkit-sticky;
+      position: sticky;
     }
 
     .totalSection div {
@@ -863,7 +865,7 @@ margin-left: 10%;
          
             <div class="totalSection" id="totalSection">
                 <div>
-                  Total: $0.00
+                  Total: PLN 0.00
                 </div>
                 <div class="icon-cart">
                   <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
