--- a/public/Pricing.html
+++ b/public/Pricing.html
@@ -1079,7 +1079,7 @@ document.addEventListener('DOMContentLoaded', function () {
             }
         });
 
-    document.querySelectorAll('.listProduct, .listOfficeProduct, .listDryCleaning, .listExtras').forEach(list => {
+    document.querySelectorAll('.listProduct, .listOfficeProduct, .listHouseProduct, .listDryCleaning, .listExtras').forEach(list => {
         list.addEventListener('click', (event) => {
             let positionClick = event.target;
             if (positionClick.classList.contains('addCart')) {
