--- a/public/Home.html
+++ b/public/Home.html
@@ -716,10 +716,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
 
     // Event listener for decline cookies button
     declineCookiesBtn.addEventListener('click', function() {
-        // Handle decline action, for example, redirect to a privacy policy page
-        window.location.href = 'privacy-policy.html'; // Replace with your privacy policy page URL
+        cookiesPopup.style.display = 'none';
     });
 });
+
 
 </script>
 </body></html>
