--- a/public/Home.html
+++ b/public/Home.html
@@ -678,45 +678,32 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     var acceptCookiesBtn = document.getElementById('accept-cookies-btn');
     var declineCookiesBtn = document.getElementById('decline-cookies-btn');
 
-    // Check if cookies are accepted, if not show the popup
-    if (!getCookie('cookies_accepted')) {
+    // Function to set flag in local storage
+    function setPopupStatus(status) {
+        localStorage.setItem('cookiesPopupStatus', status);
+    }
+
+    // Check if cookies popup should be displayed
+    function shouldDisplayPopup() {
+        return !localStorage.getItem('cookiesPopupStatus');
+    }
+
+    // Check if cookies popup should be displayed on page load
+    if (shouldDisplayPopup()) {
         cookiesPopup.style.display = 'block';
-    }
-
-    // Function to set cookie
-    function setCookie(cname, cvalue, exdays) {
-        var d = new Date();
-        d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
-        var expires = "expires=" + d.toUTCString();
-        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-    }
-
-    // Function to get cookie
-    function getCookie(cname) {
-        var name = cname + "=";
-        var decodedCookie = decodeURIComponent(document.cookie);
-        var ca = decodedCookie.split(';');
-        for (var i = 0; i < ca.length; i++) {
-            var c = ca[i];
-            while (c.charAt(0) == ' ') {
-                c = c.substring(1);
-            }
-            if (c.indexOf(name) == 0) {
-                return c.substring(name.length, c.length);
-            }
-        }
-        return "";
     }
 
     // Event listener for accept cookies button
     acceptCookiesBtn.addEventListener('click', function() {
         setCookie('cookies_accepted', 'true', 365); // Cookie will expire after 365 days
         cookiesPopup.style.display = 'none';
+        setPopupStatus('accepted');
     });
 
     // Event listener for decline cookies button
     declineCookiesBtn.addEventListener('click', function() {
         cookiesPopup.style.display = 'none';
+        setPopupStatus('declined');
     });
 });
 
