--- a/public/Home.html
+++ b/public/Home.html
@@ -215,8 +215,8 @@
     </section>
     <section class="u-clearfix u-custom-color-3 u-section-2" id="sec-df84">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="custom-expanded u-image u-image-default u-image-1" src="images/pexels-tima-miroshnichenko-6197117.jpg" alt="" data-image-width="5940" data-image-height="3960">
-        <img class="u-image u-image-default u-image-2" src="images/pexels-liliana-drew-9462154.jpg" alt="" data-image-width="4000" data-image-height="6000">
+        <img class="custom-expanded u-image u-image-default u-image-1" src="images/NewImages/IMG_9255.JPG" alt="" data-image-width="5940" data-image-height="3960">
+        <img class="u-image u-image-default u-image-2" src="images/NewImages/IMG_9274.JPG" alt="" data-image-width="4000" data-image-height="6000">
         <p class="u-text u-text-1"> We specialize in thorough room cleaning, tackling dirt on every surface &amp; household appliance. Our expertise extends to dry cleaning of upholstered furniture and carpets, ensuring a pristine environment in every space. Whether it's a house, apartment, office, or other venues like schools, gyms, and restaurants, we handle all sizes and complexities of cleaning tasks. With our service, dirt doesn't stand a chance! </p>
         <a href="Home.html#sec-e262" class="u-border-none u-btn u-button-style u-custom-color-2 u-hover-white u-btn-1">More ABout Our Services</a>
       </div>
@@ -227,7 +227,7 @@
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
               <div class="u-back-slide" data-image-width="5940" data-image-height="3960">
-                <img class="u-back-image u-expanded" src="images/pexels-tima-miroshnichenko-6197117.jpg">
+                <img class="u-back-image u-expanded" src="images/NewImages/IMG_9254.JPG">
               </div>
               <div class="u-over-slide u-over-slide-1">
                 <h3 class="u-gallery-heading" style="font-weight: 700;">Sample Title</h3>
@@ -236,7 +236,7 @@
             </div>
             <div class="u-carousel-item u-gallery-item u-carousel-item-2" data-image-width="2836" data-image-height="1875">
               <div class="u-back-slide" data-image-width="4000" data-image-height="6000">
-                <img class="u-back-image u-expanded" src="images/pexels-liliana-drew-9462154.jpg">
+                <img class="u-back-image u-expanded" src="images/NewImages/IMG_9258.JPG">
               </div>
               <div class="u-over-slide u-over-slide-2">
                 <h3 class="u-gallery-heading" style="font-weight: 700;">Sample Title</h3>
@@ -245,8 +245,7 @@
             </div>
             <div class="u-carousel-item u-gallery-item u-carousel-item-3" data-image-width="1280" data-image-height="853">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/b676f76bc683a9d296ecf182613341fa6a987190b5f2fef8f05f174b79064a12ca25e77ef4db49345363ff9d76536fdc0641f2f94325ca2203a087_1280.jpg">
-              </div>
+                <img class="u-back-image u-expanded" src="images/NewImages/IMG_9267.JPG"
               <div class="u-over-slide u-over-slide-3"></div>
               <style data-mode="XL" data-visited="true"></style>
               <style data-mode="XXL" data-visited="true"></style>
@@ -282,13 +281,13 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </a>
           <ol class="u-carousel-thumbnails u-spacing-10 u-carousel-thumbnails-1">
             <li class="u-active u-carousel-thumbnail u-carousel-thumbnail-1" data-u-target="#carousel-1e27" data-u-slide-to="0">
-              <img class="u-carousel-thumbnail-image u-image" src="images/pexels-tima-miroshnichenko-6197117.jpg">
+              <img class="u-carousel-thumbnail-image u-image" src="images/NewImages/IMG_9254.JPG">
             </li>
             <li class="u-carousel-thumbnail u-carousel-thumbnail-2" data-u-target="#carousel-1e27" data-u-slide-to="1">
-              <img class="u-carousel-thumbnail-image u-image" src="images/pexels-liliana-drew-9462154.jpg">
+              <img class="u-carousel-thumbnail-image u-image" src="images/NewImages/IMG_9258.JPG">
             </li>
             <li class="u-carousel-thumbnail u-carousel-thumbnail-3" data-u-target="#carousel-1e27" data-u-slide-to="2">
-              <img class="u-carousel-thumbnail-image u-image" src="images/b676f76bc683a9d296ecf182613341fa6a987190b5f2fef8f05f174b79064a12ca25e77ef4db49345363ff9d76536fdc0641f2f94325ca2203a087_1280.jpg">
+              <img class="u-carousel-thumbnail-image u-image" src="images/NewImages/IMG_9267.JPG">
             </li>
           </ol>
         </div>
@@ -356,7 +355,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
               <div class="u-back-slide" data-image-width="4000" data-image-height="6000">
-                <img class="u-back-image u-expanded" src="images/pexels-liliana-drew-9462154.jpg">
+                <img class="u-back-image u-expanded" src="images/NewImages/IMG_9267.JPG">
               </div>
               <div class="u-align-center u-over-slide u-valign-bottom u-over-slide-1">
                 <h3 class="u-gallery-heading" style="font-weight: 700;">Sample Title</h3>
@@ -365,7 +364,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </div>
             <div class="u-carousel-item u-gallery-item u-carousel-item-2">
               <div class="u-back-slide" data-image-width="5940" data-image-height="3960">
-                <img class="u-back-image u-expanded" src="images/pexels-tima-miroshnichenko-6197117.jpg">
+                <img class="u-back-image u-expanded" src="images/NewImages/IMG_9273.JPG">
               </div>
               <div class="u-align-center u-over-slide u-valign-bottom u-over-slide-2">
                 <h3 class="u-gallery-heading" style="font-weight: 700;">Sample Title</h3>
